[package]
name = "rustpub"
version = "0.1.0"
authors = ["mr-chrome <giovanni.crisalfi@gmail.com>"]
edition = "2018"

[dependencies]
tempfile = "3.1.0"
image = "0.23.12"
tera = "1"
soup = "0.5.0"
url = "2.2.0"
epub-builder = "0.4.8"
error-chain = "0.12.4"
reqwest = { version = "0.10.8", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.61"
clap = "2.33.3"
kuchiki = "0.8.1"
